--- a/bookstore/store/templates/cart.html
+++ b/bookstore/store/templates/cart.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div>
+    {% for book in order %}
+        <p>{{book.book}}</p>
+        <p>{{book.quantity}} - {{book.book.price}}</p>
+        <a href="{% url 'store:add_cart' book.book.pk %}">Add</a>
+        <a href="{% url 'store:remove_cart' book.book.pk %}">Remove</a>
+    {% empty %}
+    <h2>There are no Books in cart</h2>
+    {% endfor %}
+    {% if total > 0 %}
+        <p>Total: {{total}}</p>
+    {% endif %}
+</div>
+<a href="{% url 'store:book_main' %}">Zurück</a>
+{% endblock %}
