--- a/bookstore/store/templates/detail.html
+++ b/bookstore/store/templates/detail.html
@@ -1,8 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
     <div>
-        <p>{{ object.title }}</p>
-        <p>{{ object.author }}</p>
+        <p>{{ object.title|title }} - {{ object.author }}</p>
         <p>{{ object.description }}</p>
     </div>
+
+<h3>Reviews</h3>
+{% if review %}
+    {% for r in review %}
+        <h4>{{ r.text }}</h4>
+        <p>{{ r.user }} - {{ r.publish_date }}</p>
+        {% if r.user == request.user %}
+            <a href="">Bearbeiten</a>
+        {% endif %}
+    {% endfor %}
+{% endif %}
+
+<h4>Make your own Review</h4>
+    <form method="post" action="{% url 'store:save_review' object.pk %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
+
+<a href="{% url 'store:book_main' %}">Zurück</a>
+
 {% endblock %}
