--- a/bookstore/store/templates/index.html
+++ b/bookstore/store/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% if request.user.is_authenticated %}
-    <h4>
+    <h4>Hi
         {% if request.user.first_name %}
             {{ request.user.first_name }}
         {% else %}
@@ -20,7 +20,9 @@
 {% endif %}
 <ul>
     {% for item in object_list %}
-    <li><a href="{% url 'store:bookDetail' item.pk %}">{{item.title}} - {{item.author}}</a></li>
+        <li>{{ item.title|title }} - {{ item.author }}</li>
+        <a href="{% url 'store:add_cart' item.pk %}">Add</a>
+        <a href="{{ item.get_absolute_url }}">Detail</a>
     {% endfor %}
 </ul>
 {% endblock %}
