--- a/bookstore/store/templates/index.html
+++ b/bookstore/store/templates/index.html
@@ -1,28 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if request.user.is_authenticated %}
-    <h4>Hi
-        {% if request.user.first_name %}
-            {{ request.user.first_name }}
-        {% else %}
-            {{ request.user.username }}
-        {% endif %}!
-        <br>
-        <a href="{% url 'auth_logout' %}">Logout</a>
-    </h4>
-{% else %}
-    <h4>
-        Welcome Mystery-Person do you want to register??
-        <br>
-        <a href="{% url 'auth_login' %}">Login</a>
-        <a href="{% url 'social:begin' 'facebook' %}">Facebook-Login</a>
-    </h4>
-{% endif %}
-<ul>
-    {% for item in object_list %}
-        <li>{{ item.title|title }} - {{ item.author }}</li>
-        <a href="{% url 'store:add_cart' item.pk %}">Add</a>
-        <a href="{{ item.get_absolute_url }}">Detail</a>
-    {% endfor %}
-</ul>
+{% for item in object_list %}
+<div class="col-lg-3">
+    <div class="thumbnail">
+        <img src="{{item.cover}}" >
+        <div class="caption">
+            <h3>{{ item.title|title }} - {{ item.author }}</h3>
+            <p><a href="{% url 'store:add_cart' item.pk %}">Add to Cart</a><span> -</span>
+                <a href="{{ item.get_absolute_url }}">Details</a></p>
+        </div>
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
