--- a/bookstore/store/templates/cart.html
+++ b/bookstore/store/templates/cart.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-<div>
-    {% for book in order %}
-        <p>{{book.book}}</p>
-        <p>{{book.quantity}} - {{book.book.price}}</p>
-        <a href="{% url 'store:add_cart' book.book.pk %}">Add</a>
-        <a href="{% url 'store:remove_cart' book.book.pk %}">Remove</a>
-    {% empty %}
-    <h2>There are no Books in cart</h2>
-    {% endfor %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h2>{{request.user}}'s-Cart</h2>
+    </div>
+    <div class="panel-body">
+        {% for book in order %}
+            <p>{{book.book}}</p>
+            <p>{{book.quantity}} x {{book.book.price}}</p>
+            <a href="{% url 'store:add_cart' book.book.pk %}">+</a>
+            <span> /</span>
+            <a href="{% url 'store:remove_cart' book.book.pk %}">-</a>
+        {% empty %}
+        <h2>There are no Books in cart</h2>
+        {% endfor %}
+    </div>
     {% if total > 0 %}
+    <div class="panel-footer">
         <p>Total: {{total}}</p>
+    </div>
     {% endif %}
 </div>
 <a href="{% url 'store:book_main' %}">Zurück</a>
