--- a/bookstore/store/templates/delete_review.html
+++ b/bookstore/store/templates/delete_review.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+    <form method="post" action=".">
+        {% csrf_token %}
+        <p>Are you sure you want delete the Review for <i>{{ review.book|title }}</i></p>
+        <button type="submit">Delete</button>
+    </form>
+
+<a href="{% url 'store:book_main' %}">Zurück</a>
+
+{% endblock %}
